--- a/scss/_components.row.scss
+++ b/scss/_components.row.scss
@@ -88,3 +88,10 @@
             }
         }
     }
+
+.c-row--cta {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
