--- a/_includes/generic.javascript.html
+++ b/_includes/generic.javascript.html
@@ -7,4 +7,5 @@
 
 <!-- Theme specific JavaScript. Add your other scripts here -->
 <script src="{{ site.github.url }}/vendor/blazy/blazy.min.js"></script>
+<script src="{{ site.github.url }}/vendor/jquery.stellar/jquery.stellar.js"></script>
 <script src="{{ site.github.url }}/js/theme.concat.js"></script>
