--- a/scss/_components.header.scss
+++ b/scss/_components.header.scss
@@ -7,7 +7,7 @@
 .c-header {
     display: flex;
     align-items: center;
-    //justify-content: space-between;
-    //justify-content: center;
-    height: 2.675rem;
+    justify-content: space-between;
+    justify-content: center;
+    //height: 2.675rem;
 }
