--- a/scss/_components.page.scss
+++ b/scss/_components.page.scss
@@ -9,16 +9,16 @@
 }
 
 .c-page-header {
-    position: absolute;
+    //position: absolute;
     //position: fixed;
-    top: $alpha-leading * 1rem;
-    right: 0;
+    //top: $alpha-leading * 1rem;
+    //right: 0;
     ////bottom: 0;
-    left: 0;
+    //left: 0;
     //background-color: rgba(white,.975);
     //border-radius: 0 $radius $radius 0;
     //box-shadow: 0 10px 30px rgba(palette(color-neutral,xxx-dark),.125);
-    z-index: 2;
+    //z-index: 2;
     //@include padding-left($columns-gutter);
 
     //@include mq(bp3) {
