--- a/scss/_shame.scss
+++ b/scss/_shame.scss
@@ -334,17 +334,20 @@ $picture-gutter: 5px;
 
 .c-section--timeline {
     //background-color: palette(color-beta,x-light);
-    background-image: linear-gradient(to bottom, palette(color-beta,light),palette(color-gamma,light));
+    //background-image: linear-gradient(to bottom, palette(color-beta,light),palette(color-gamma,light));
+    background-image: linear-gradient(to bottom, palette(color-beta,light),palette(color-neutral,xxx-light));
 }
 
 .c-section--climate {
     //background-color: palette(color-gamma,light);
-    background-image: linear-gradient(to bottom, palette(color-gamma,light),palette(color-neutral,xxx-light));
+    //background-image: linear-gradient(to bottom, palette(color-gamma,light),palette(color-neutral,xxx-light));
+    background-image: linear-gradient(to bottom, palette(color-neutral,xxx-light),palette(color-gamma,light));
 }
 
 .c-section--vision {
     //background-color: palette(color-gamma,light);
-    background-image: linear-gradient(to bottom, palette(color-neutral,xxx-light),palette(color-alpha,light));
+    //background-image: linear-gradient(to bottom, palette(color-neutral,xxx-light),palette(color-alpha,light));
+    background-image: linear-gradient(to bottom, palette(color-gamma,dark),palette(color-gamma,x-dark));
 }
 
 .c-section--climate-vision {
