added timeline aside info

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -55,20 +55,21 @@
 /* Components */
 @import 'components.page';
 @import 'components.header';
-@import 'components.navigation';
+//@import 'components.navigation';
 @import 'components.brand';
 @import 'components.row';
 @import 'components.background-image';
-@import 'components.icons';
-@import 'components.symbols';
-@import 'components.alerts';
+@import 'components.timeline';
+//@import 'components.icons';
+//@import 'components.symbols';
+//@import 'components.alerts';
 @import 'components.buttons';
-@import 'components.input';
-@import 'components.label';
+//@import 'components.input';
+//@import 'components.label';
 @import 'components.lists';
-@import 'components.pagination';
-@import 'components.cards';
-@import 'components.styleguide';
+//@import 'components.pagination';
+//@import 'components.cards';
+//@import 'components.styleguide';
 
 /* Plugins */
 @import 'plugins.syntax';
