fixed mobile pictures

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -60,6 +60,7 @@
 @import 'components.row';
 @import 'components.background-image';
 @import 'components.timeline';
+@import 'components.pictures';
 //@import 'components.icons';
 //@import 'components.symbols';
 //@import 'components.alerts';
