--- a/scss/_components.lists.scss
+++ b/scss/_components.lists.scss
@@ -14,7 +14,7 @@
 // Custom bulleted list
 
 .c-list-bullet {
-    @include margin-tb(0,1);
+    //@include margin-tb(0,1);
 
     li > & {
         margin: 0;
@@ -31,7 +31,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            color: palette(color-neutral, base);
+            color: palette(color-gamma);
 
             li > ul > & {
                 content: '\203A';
