--- a/scss/_components.page.scss
+++ b/scss/_components.page.scss
@@ -6,6 +6,7 @@
 
 .c-page {
     //display: flex;
+    background-image: linear-gradient(to bottom, palette(color-alpha,light), palette(color-beta,light), palette(color-delta,x-light), palette(color-gamma,light), palette(color-alpha,light));
 }
 
 .c-page-header {
