--- a/scss/_shame.scss
+++ b/scss/_shame.scss
@@ -11,8 +11,15 @@
 
 .s-content {
     h3 {
-        color: rgba(palette(color-neutral,xxx-dark),.9);
+        color: palette(color-neutral,xxx-dark);
     }
+
+    a {
+        text-decoration: underline;
+    }
+    //ul {
+    //    padding-left: 0;
+    //}
 }
 
 .c-section {
@@ -20,21 +27,21 @@
 }
 
 .c-section--intro {
-    background-image: linear-gradient(to bottom, palette(color-alpha,light), palette(color-beta,light));
+    //background-image: linear-gradient(to bottom, palette(color-alpha,light), palette(color-beta,light));
 }
 
 .c-section--timeline {
-    background-image: linear-gradient(to bottom, palette(color-beta,light),palette(color-neutral,xxx-light));
-}
-
-.c-section--climate {
-    background-image: linear-gradient(to bottom, palette(color-neutral,xxx-light),palette(color-gamma,light));
+    //background-image: linear-gradient(to bottom, palette(color-beta,light),palette(color-neutral,xxx-light));
+    //background-image: linear-gradient(to bottom, palette(color-beta,light),palette(color-delta,x-light));
 }
 
 .c-section--vision {
-    background-image: linear-gradient(to bottom, palette(color-gamma,dark),palette(color-gamma,x-dark));
+    //background-image: linear-gradient(to bottom, palette(color-neutral,xxx-light),palette(color-gamma,light));
+    //background-image: linear-gradient(to bottom, palette(color-delta,x-light),palette(color-gamma,light));
 }
 
-.c-section--climate-vision {
-    background-image: linear-gradient(to bottom, palette(color-gamma,light),palette(color-alpha,light));
+.c-section--cta {
+    //background-image: linear-gradient(to bottom, palette(color-neutral,xxx-light),palette(color-gamma,light));
+    //background-image: linear-gradient(to bottom, palette(color-gamma,dark),palette(color-delta,x-dark));
+    //background-image: linear-gradient(to bottom, palette(color-gamma,light),palette(color-alpha,light));
 }
