--- a/_includes/generic.javascript.html
+++ b/_includes/generic.javascript.html
@@ -1,10 +1,10 @@
-<!-- A simple polyfill that fetches external SVGs referenced in <use> elements when the browser itself fails to do so. -->
-<script defer src="{{ site.github.url }}/vendor/svgxuse/svgxuse.min.js"></script>
-
 <!-- Always Load jQuery First -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{ site.github.url }}/vendor/jquery/dist/jquery.min.js"><\/script>')</script>
 
 <!-- Theme specific JavaScript. Add your other scripts here -->
 <script src="{{ site.github.url }}/vendor/blazy/blazy.min.js"></script>
+<script src="{{ site.github.url }}/vendor/gsap/src/minified/TweenMax.min.js"></script>
+<script src="{{ site.github.url }}/vendor/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
+<script src="{{ site.github.url }}/vendor/scrollmagic/scrollmagic/minified/plugins/animation.gsap.min.js"></script>
 <script src="{{ site.github.url }}/js/theme.concat.js"></script>
