--- a/_includes/components.header.html
+++ b/_includes/components.header.html
@@ -2,6 +2,9 @@
     <div class="o-container">
         <div class="c-header">
             {% include components.logo.html %}
+            <p class="c-header__tag">
+                onafhankelijke freinetschool
+            </p>
             {% comment %}
             {% include components.nav-main.html %}
             {% endcomment %}
