updated row system

--- a/_includes/components.pictures-1.html
+++ b/_includes/components.pictures-1.html
@@ -1,4 +1,4 @@
-<figure class="c-pictures c-pictures--first js-pictures">
+<figure class="c-pictures c-pictures--first js-pictures u-mb-gamma">
     <div class="c-picture" data-stellar-ratio="2">
         <img class="c-picture__image js-blazy" src="img/photos/small/DSC_3982.jpg" data-src-small="img/photos/small/DSC_3982.jpg" data-src-medium="img/photos/medium/DSC_3982.jpg" data-src="img/photos/large/DSC_3982.jpg" alt="">
     </div>
