--- a/_includes/components.pictures-2.html
+++ b/_includes/components.pictures-2.html
@@ -1,4 +1,4 @@
-<figure class="c-pictures c-pictures--second">
+<figure class="c-pictures c-pictures--second u-mb-gamma">
     <div class="c-picture">
         <img class="c-picture__image js-blazy" src="img/photos/small/DSC_0254.jpg" data-src-small="img/photos/small/DSC_0254.jpg" data-src-medium="img/photos/medium/DSC_0254.jpg" data-src="img/photos/large/DSC_0254.jpg" alt="">
     </div>
