--- a/_includes/components.pictures-3.html
+++ b/_includes/components.pictures-3.html
@@ -1,4 +1,4 @@
-<figure class="c-pictures c-pictures--last u-mb-epsilon">
+<figure class="c-pictures c-pictures--last u-mb-gamma">
     <div class="c-picture">
         <img class="c-picture__image js-blazy" src="img/photos/small/kasteel.jpg" data-src-small="img/photos/small/kasteel.jpg" data-src-medium="img/photos/medium/kasteel.jpg" data-src="img/photos/large/kasteel.jpg" alt="">
     </div>
