--- a/_includes/components.header.html
+++ b/_includes/components.header.html
@@ -3,7 +3,7 @@
         <div class="c-header">
             {% include components.logo.html %}
             <p class="c-header__tag">
-                Blijf ontdekken.
+                Blijf ontdekken
             </p>
             {% comment %}
             {% include components.nav-main.html %}
