Removed small and images to test if this works beter.

--- a/_includes/components.pictures-2.html
+++ b/_includes/components.pictures-2.html
@@ -1,11 +1,11 @@
 <figure class="c-pictures c-pictures--second u-mb-gamma">
     <div class="c-picture">
-        <img class="c-picture__image js-blazy" src="img/photos/small/DSC_0254.jpg" data-src-small="img/photos/small/DSC_0254.jpg" data-src-medium="img/photos/medium/DSC_0254.jpg" data-src="img/photos/large/DSC_0254.jpg" alt="">
+        <img class="c-picture__image js-blazy" src="img/photos/small/DSC_0254.jpg" data-src="img/photos/large/DSC_0254.jpg" alt="">
     </div>
     <div class="c-picture">
-        <img class="c-picture__image js-blazy" src="img/photos/small/DSC_0129.jpg" data-src-small="img/photos/small/DSC_0129.jpg" data-src-medium="img/photos/medium/DSC_0129.jpg" data-src="img/photos/large/DSC_0129.jpg" alt="">
+        <img class="c-picture__image js-blazy" src="img/photos/small/DSC_0129.jpg" data-src="img/photos/large/DSC_0129.jpg" alt="">
     </div>
     <div class="c-picture">
-        <img class="c-picture__image js-blazy" src="img/photos/small/DSC_0622.jpg" data-src-small="img/photos/small/DSC_0622.jpg" data-src-medium="img/photos/medium/DSC_0622.jpg" data-src="img/photos/large/DSC_0622.jpg" alt="">
+        <img class="c-picture__image js-blazy" src="img/photos/small/DSC_0622.jpg" data-src="img/photos/large/DSC_0622.jpg" alt="">
     </div>
 </figure>
