--- a/_includes/components.pictures-1.html
+++ b/_includes/components.pictures-1.html
@@ -1,11 +1,11 @@
-<figure class="c-pictures c-pictures--first js-pictures u-mb-gamma">
-    <div class="c-picture" data-stellar-ratio="2">
-        <img class="c-picture__image js-blazy" src="img/photos/small/DSC_3982.jpg" data-src-small="img/photos/small/DSC_3982.jpg" data-src-medium="img/photos/medium/DSC_3982.jpg" data-src="img/photos/large/DSC_3982.jpg" alt="">
+<figure class="c-pictures c-pictures--first u-mb-gamma">
+    <div class="c-picture">
+        <img class="c-picture__image js-blazy" src="img/photos/small/DSC_3982.jpg" data-src="img/photos/large/DSC_3982.jpg" alt="">
     </div>
-    <div class="c-picture" data-stellar-ratio="3">
-        <img class="c-picture__image js-blazy" src="img/photos/small/2_24.jpg" data-src-small="img/photos/small/2_24.jpg" data-src-medium="img/photos/medium/2_24.jpg" data-src="img/photos/large/2_24.jpg" alt="">
+    <div class="c-picture">
+        <img class="c-picture__image js-blazy" src="img/photos/small/2_24.jpg" data-src="img/photos/large/2_24.jpg" alt="">
     </div>
-    <div class="c-picture" data-stellar-ratio="5">
-        <img class="c-picture__image js-blazy" src="img/photos/small/2_47.jpg" data-src-small="img/photos/small/2_47.jpg" data-src-medium="img/photos/medium/2_47.jpg" data-src="img/photos/large/2_47.jpg" alt="">
+    <div class="c-picture">
+        <img class="c-picture__image js-blazy" src="img/photos/small/2_47.jpg" data-src="img/photos/large/2_47.jpg" alt="">
     </div>
 </figure>
