Fixed button hover color bug.

--- a/scss/_components.buttons.scss
+++ b/scss/_components.buttons.scss
@@ -165,6 +165,7 @@
     &:focus {
         background-color: palette(color-gamma);
         border-color: palette(color-gamma);
+        color: palette(color-neutral,xxx-light);
     }
 
     &:active {
